--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./src/@types", "./node_modules/@types"],
+    "typeRoots": ["src/@types", "./node_modules/@types"],
     "baseUrl": "./",
     "paths": {
       "@interfaces/*": ["src/interfaces/*"],
